# local-rag

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  chat.php  chatbot.htaccess  contenu.txt  embeddings.json  evaluate.py  index.py  pyproject.toml  retrieve.py  secret.php  secrets.example.php  widget-divi.html  widget.html
.claude/: launch.json
data/: .htaccess
data/sample/: about.md
src/rag/: __init__.py  api.py  cli.py  config.py  generator.py  ingest.py  pipeline.py  retriever.py  store.py
tests/: test_ingest.py
